--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
+        <h1>Space Weather Wizard: Mastering the art of understanding the CMEs</h1>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#profile">Profile</a></li>
                 <li><a href="#research">Research</a></li>
-                <li><a href="#others">Others</a></li>
+                <li><a href="#gallery">Gallery</a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="about">
-        <h2>About</h2>
+    <section id="home">
+        <h2>Home</h2>
         <p>This is the About section of the website.</p>
     </section>
 
-    <section id="about-me">
-        <h2>About Me</h2>
-        <img src="profile.jpg" alt="Profile Picture" class="profile-pic">
+    <section id="profile">
+        <h2>Profile</h2>
+        <img src="./media/dp1.png" alt="Profile Picture" class="profile-pic">
         <p>Here you can learn more about me.</p>
     </section>
 
@@ -35,8 +35,8 @@
         <p>Details about my research go here.</p>
     </section>
 
-    <section id="others">
-        <h2>Others</h2>
+    <section id="gallery">
+        <h2>Gallery</h2>
         <p>Other information can be found here.</p>
     </section>
 
